--- a/src/main/resources/templates/auditManager/index.html
+++ b/src/main/resources/templates/auditManager/index.html
@@ -93,7 +93,7 @@
 							<div id="subPages1" class="collapse ">
 								<ul class="nav">
 									<li><a href="javascript:void(0);" onclick="addTab('项目基本信息','proinfo')" >项目基本信息</a></li>
-									<!--<li><a href="javascript:void(0)" onclick="addTab('角色分配','roleassign')">角色分配</a></li>-->
+									<li><a href="javascript:void(0)" onclick="addTab('角色分配','roleassign')">我的项目</a></li>
 									<!--<li><a href="javascript:void(0)" onclick="addTab('任务分配','taskassign')">任务分配</a></li>-->
 									<!--<li><a href="javascript:void(0)" onclick="addTab('审计方案','auditscheme')">审计方案</a></li>-->
 								</ul>
