--- a/src/main/resources/templates/auditManager/index.html
+++ b/src/main/resources/templates/auditManager/index.html
@@ -61,19 +61,19 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li>
 							<a href="#" class="notification-item"><span class="dot bg-danger"></span>修改信息</a>
-						</li>>
+						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#" class="notification-item"><span class="dot bg-success"></span>查看个人信息</a></li>>
+						<li><a href="#" class="notification-item"><span class="dot bg-success"></span>查看个人信息</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#" class="notification-item"><span class="dot bg-warning"></span>注销</a></li>>
+						<li><a href="#" class="notification-item"><span class="dot bg-warning"></span>注销</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</div>
-	<div data-options="region:'west',split:true" style="width:310px;background-color: black">
+	<div data-options="region:'west',split:true" style="width:310px;background-color: lightblue">
 		<div id="sidebar-nav" class="sidebar">
 			<div class="sidebar-scroll">
 				<nav>
