--- a/src/main/resources/templates/initialRoles/index.html
+++ b/src/main/resources/templates/initialRoles/index.html
@@ -67,7 +67,7 @@
 			</div>
 		</nav>
 	</div>
-	<div data-options="region:'west'" style="padding:5px;width: 220px;background-color:black" >
+	<div data-options="region:'west'" style="padding:5px;width: 220px;background-color:lightblue" >
 		<div id="sidebar-nav" class="sidebar" >
 			<div class="sidebar-scroll">
 				<nav>
@@ -84,7 +84,7 @@
 							</div>
 						</li>
 						<li><a href="javascript:void(0)" onclick="addTab('用户管理','useradmin')"><i class="lnr lnr-cog"></i> <span>用户管理</span></a></li>
-						<li><a href="javascript:void(0)" onclick="addTab('角色管理','')"><i class="lnr lnr-alarm"></i> <span>角色管理</span></a></li>
+						<li><a href="javascript:void(0)" onclick="addTab('角色管理','rolemanage')"><i class="lnr lnr-alarm"></i> <span>角色管理</span></a></li>
 						<li><a href="javascript:void(0)" onclick="addTab('属性管理','propertymanage')"><i class="lnr lnr-text-format"></i> <span>属性管理</span></a></li>
 						<li><a href="javascript:void(0)" onclick="addTab('属性设置','propertyset')"><i class="lnr lnr-linearicons"></i> <span>属性设置</span></a></li>
 						<li><a href="javascript:void(0)" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>
