--- a/src/main/resources/templates/auditManager/auditorManage.html
+++ b/src/main/resources/templates/auditManager/auditorManage.html
@@ -10,71 +10,182 @@
     <title>审计机构管理</title>
 </head>
 <script>
-    function OpenDiv(){
-        document.getElementById("div1").style.display="block";
-    }
-    function addDialog() {
-        $("#win").window('open');
-    }
-
-    function addDialog1() {
-        $("#wi").window('open');
-    }
-
     function ayo() {
-        $.messager.confirm('提示','确认删除吗?',function (r) {
-            if(r){
-                alert('想跳哪去自己写');
-            }
-        });
+        var row=$('#auditor1').datagrid('getSelected');
+        if(row){
+            $.messager.confirm('提示','确认删除吗?',function (r) {
+                if(r){
+                    $.ajax({
+                        url:'delbody?abId='+row.abId,
+                        type:'get',
+                        success:function (data) {
+                            if(data==1){
+                                alert("删除审计单位成功");
+                                $("#auditor1").datagrid('reload');
+                            }else{
+                                alert("删除审计单位失败");
+                            }
+                        }
+                    })
+                }
+            });
+        }else{
+            alert("请选择审计机构");
+        }
     }
+
+    function add(){
+        $("#add_form").form({
+            url:'addbody',
+            onSubmit:function () {
+                if($("#abName").val()==""){
+                    alert("名称不能为空");
+                    return false;
+                }else if($("#abId").val()==""){
+                    alert("代码不能为空");
+                    return false;
+                }else{
+                    return true;
+                }
+            },
+            success:function (data) {
+                alert(data);
+                if(data==1){
+                    alert("增加审计单位成功");
+                }else{
+                    alert("增加审计单位失败");
+                }
+            }
+        })
+    }
+
+    function edit(){
+        $("#edit_form").form({
+            url:'editbody',
+            onSubmit:function () {
+                if($("#abName1").val()==""){
+                    alert("名称不能为空");
+                    return false;
+                }else if($("#abId1").val()==""){
+                    alert("代码不能为空");
+                    return false;
+                }else{
+                    return true;
+                }
+            },
+            success:function (data) {
+                if(data==1){
+                    alert("编辑审计单位成功");
+                    $("#auditor").datagrid('reload');
+                }else{
+                    alert("编辑审计单位失败");
+                }
+            }
+        })
+    }
+
+    function openedit(){
+        var row=$('#auditor').datagrid('getSelected');
+        if(row){
+            $("#wi").dialog('open');
+            $("#edit_form").form('load',row);
+        }else{
+            alert("请选择审计机构");
+        }
+    }
+
+    function openadd(){
+        var row=$('#auditor').datagrid('getSelected');
+        if(row){
+            $("#win").dialog('open');
+            $("#abHigher1").textbox('setValue',row.abId);
+        }else{
+            alert("请选择审计机构");
+        }
+    }
+
+    $(function () {
+        $("#auditor").datagrid({
+            onSelect:function (rowIndex,rowData) {
+                $.ajax({
+                    url:'sonauditor?abHigher='+rowData.abId,
+                    type:'get',
+                    success:function (data) {
+                        $("#auditor1").datagrid('loadData',data);
+                    }
+                })
+            }
+        })
+    })
+
+
 </script>
 <body>
 <div id="ad" style="background: rgba(0, 0, 255, 0.1)">
-    <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:addDialog()">增加</a>
-    <a href="#" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:ayo()">删除</a>
-    <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="javascript:addDialog1()">编辑</a>
-    <a href="#" class="easyui-linkbutton" iconCls="icon-print" plain="true" onclick="javascript:a()">分配管理机构</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:openadd()">增加</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cut" plain="true" onclick="javascript:ayo()">删除</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="javascript:openedit()">编辑</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-print" plain="true" onclick="javascript:a()">分配管理机构</a>
 </div>
 <div>
-    <table id="id1" class="easyui-datagrid" title="" style="width:100%;height: 370px;"  pagination="true" toolbar="#ad">
+    <table id="auditor" class="easyui-datagrid" title="" style="width:1400px;height: 320px;"  pagination="true" toolbar="#ad" data-options="url:'preauditor',singleSelect:true">
         <thead>
         <tr>
-            <th data-options="field:'itemid',width:550">名称</th>
-            <th data-options="field:'productid',width:550">代码</th>
+            <th data-options="field:'abName',width:700">名称</th>
+            <th data-options="field:'abId',width:697">代码</th>
         </tr>
         </thead>
-        <tbody id="tree">
-        <tr class="easyui-tree">
-        </tr>
-        </tbody>
     </table>
     <div id="win" class="easyui-dialog" style="width:400px;padding: 20px;"
          iconCls="icon-add" data-options="title:'增加',modal:true,closed:true">
-        <form id="" method="post" novalidate>
+        <form id="add_form" method="post" novalidate>
             <div style="margin-bottom:10px">
-                <input class="easyui-textbox" label="名称:" required="true" style="width:80%"></input>
+                <input class="easyui-textbox" id="abHigher1" label="上级:" name="abHigher"  readonly="readonly" style="width:80%"></input>
             </div>
             <div style="margin-bottom:10px">
-                <input class="easyui-textbox" label="代码:" required="true" style="width:80%"></input>
+                <input class="easyui-textbox" id="abName" label="名称:" name="abName" required="true" style="width:80%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" id="abId" label="代码:" name="abId" required="true" style="width:80%"></input>
             </div>
             <div style="text-align:right">
-                <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                <input class="easyui-linkbutton" type="submit" value="保存" onclick="add()" style="width:80px;height:30px">
                 <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
             </div>
         </form>
     </div>
     <div id="wi" class="easyui-dialog" style="width:400px;padding: 20px;"
          iconCls="icon-edit" data-options="title:'编辑',modal:true,closed:true">
-        <form id="" method="post" novalidate>
+        <form id="edit_form" method="post" novalidate>
             <div style="margin-bottom:10px">
-                <input class="easyui-textbox" label="名称:" required="true" style="width:80%"></input>
+                <select id="abHigher" label="上级" class="easyui-combobox" name="abHigher" style="width:100%;">
+                    <option>请选择上级</option>
+                    <option th:each="pr:${pre}" th:text="${pr.abName}" th:value="${pr.abId}"></option>
+                </select></input>
             </div>
             <div style="margin-bottom:10px">
-                <input class="easyui-textbox" label="代码:" required="true" style="width:80%"></input>
+                <input class="easyui-textbox" id="abName1" name="abName" label="名称:" required="true" style="width:80%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" id="abId1" name="abId" label="代码:" required="true" style="width:80%"></input>
             </div>
             <div style="text-align:right">
-                <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                <input class="easyui-linkbutton" type="submit" value="保存" onclick="edit()" style="width:80px;height:30px">
+                <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
+            </div>
+        </form>
+    </div>
+    <div id="fen" class="easyui-dialog" style="width:400px;padding: 20px;"
+         iconCls="icon-add" data-options="title:'增加',modal:true,closed:true">
+        <form id="fen_form" method="post" novalidate>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" id="" label="上级:" name="abHigher"  readonly="readonly" style="width:80%"></input>
+            </div>
+            <div style="margin-bottom:10px">
+                <input class="easyui-textbox" id="" label="名称:" name="abName" required="true" style="width:80%"></input>
+            </div>
+            <div style="text-align:right">
+                <input class="easyui-linkbutton" type="submit" value="保存" onclick="add()" style="width:80px;height:30px">
                 <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
             </div>
         </form>
@@ -82,22 +193,18 @@
 </div>
 
 <div>
-    <table id="datagrid" class="easyui-datagrid" title="" style="width:100%;height: 370px;"  pagination="true" oolbar="#d">
+    <table id="auditor1" class="easyui-datagrid" title="" style="width:1400px;height: 320px;"  pagination="true" toolbar="#d">
         <thead>
         <tr>
-            <th data-options="field:'itemid',width:550">名称</th>
-            <th data-options="field:'productid',width:550">代码</th>
+            <th data-options="field:'abName',width:700">名称</th>
+            <th data-options="field:'abId',width:697">代码</th>
         </tr>
         </thead>
-        <tbody>
-
-        </tbody>
-
     </table>
 
 </div>
 <div id="d" style="background: rgba(0, 0, 255, 0.1)">
-    <a href="#" class="easyui-linkbutton" iconCls="icon-reload" plain="true" onclick="javascript:a()" style="position:relative;left:1000px;">刷新</a>
+    <a href="#" class="easyui-linkbutton" iconCls="icon-reload" plain="true" onclick="javascript:a()" style="position:relative;left:700px;">刷新</a>
 </div>
 </body>
 </html>
