--- a/src/main/resources/templates/auditors/index.html
+++ b/src/main/resources/templates/auditors/index.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<!-- VENDOR CSS -->
 	<link rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
 	<link rel="stylesheet" th:href="@{/vendor/font-awesome/css/font-awesome.min.css}">
@@ -22,12 +24,6 @@
 
 	<script type="text/javascript" th:src="@{/easyui/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/easyui/jquery.easyui.min.js}"></script>
-
-	<script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"></script>
-	<script th:src="@{/vendor/jquery-slimscroll/jquery.slimscroll.min.js}"></script>
-	<script th:src="@{/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js}"></script>
-	<script th:src="@{/vendor/chartist/js/chartist.min.js}"></script>
-	<script th:src="@{/scripts/klorofil-common.js}"></script>
 	<title>审计人员首页</title>
 </head>
 <style>
@@ -68,21 +64,21 @@
 				<div id="navbar-menu">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a href="#" class="notification-item"><span class="dot bg-danger"></span>修改信息</a>
-						</li>>
+							<a href="javascript:void(0)" class="notification-item"><span class="dot bg-danger"></span>修改信息</a>
+						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#" class="notification-item"><span class="dot bg-success"></span>查看个人信息</a></li>>
+						<li><a href="javascript:void(0)" class="notification-item"><span class="dot bg-success"></span>查看个人信息</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#" class="notification-item"><span class="dot bg-warning"></span>注销</a></li>>
+						<li><a href="javascript:void(0)" class="notification-item"><span class="dot bg-warning"></span>注销</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</div>
 </div>
-<div data-options="region:'west',split:true" style="width:300px;background-color:black">
+<div data-options="region:'west',split:true" style="width:300px;background-color:lightblue">
 	<div id="sidebar-nav" class="sidebar" >
 		<div class="sidebar-scroll">
 			<nav>
@@ -98,58 +94,12 @@
 							</ul>
 						</div>
 					</li>
-					<li>
-						<a href="#subPages1" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>立项阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
-						<div id="subPages1" class="collapse ">
-							<ul class="nav">
-								<li><a href="javascript:void(0);" onclick="addTab('项目基本信息','proinfo')" >项目基本信息</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('角色分配','roleassign')">角色分配</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('任务分配','taskassign')">任务分配</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('审计方案','auditscheme')">审计方案</a></li>
-							</ul>
-						</div>
-					</li>
-					<li>
-						<a href="#subPages2" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>非现场检查阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
-						<div id="subPages2" class="collapse ">
-							<ul class="nav">
-								<li><a href="javascript:void(0);" onclick="addTab('数据抽取','dataget')" >数据抽取</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('疑点库','doublelib')">疑点库</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('非现场检查结果','result')">非现场检查结果</a></li>
-							</ul>
-						</div>
-					</li>
-					<li>
-						<a href="#subPages3" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>现场检查阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
-						<div id="subPages3" class="collapse ">
-							<ul class="nav">
-								<li><a href="javascript:void(0);" onclick="addTab('进场会','inmeeting')" >进场会</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('离场会议','outmeeting')">离场会议</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('现场检查结果','insiteresult')">现场检查结果</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('稽核清单','list')">稽核清单</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('量化打分','score')">量化打分</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('风险矩阵','riskmatrix')">风险矩阵</a></li>
-							</ul>
-						</div>
-					</li>
-					<li>
-						<a href="#subPages4" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>结束阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
-						<div id="subPages4" class="collapse ">
-							<ul class="nav">
-								<li><a href="javascript:void(0);" onclick="addTab('整改清单','changelist')" >整改清单</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('征求意见稿','fordraft')">征求意见稿</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('生成底稿','manuscript')">生成底稿</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('正式稿','officialdraft')">正式稿</a></li>
-								<li><a href="javascript:void(0)" onclick="addTab('项目归档','profile')">项目归档</a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="notifications" onclick="addTab('审计计划管理','riskmatrix')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>
-					<li><a href="typography" onclick="addTab('被审单位管理','auditedmanage')"><i class="lnr lnr-text-format"></i> <span>被审单位管理</span></a></li>
-					<li><a href="icons" onclick="addTab('审计项目','auditpro')"><i class="lnr lnr-linearicons"></i> <span>审计项目</span></a></li>
-					<li><a href="notifications" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>
-					<li><a href="notifications" onclick="addTab('审计知识库管理','auditlib')"><i class="lnr lnr-alarm"></i> <span>审计知识库管理</span></a></li>
-					<li><a href="notifications" onclick="addTab('工作日志','worklog')"><i class="lnr lnr-alarm"></i> <span>工作日志</span></a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('审计计划管理','riskmatrix')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('被审单位管理','auditedmanage')"><i class="lnr lnr-text-format"></i> <span>被审单位管理</span></a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('审计项目','auditpro')"><i class="lnr lnr-linearicons"></i> <span>审计项目</span></a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('流程定义','processdefine')"><i class="lnr lnr-alarm"></i> <span>流程定义</span></a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('审计知识库管理','auditlib')"><i class="lnr lnr-alarm"></i> <span>审计知识库管理</span></a></li>
+					<li><a href="javascript:void(0)" onclick="addTab('工作日志','worklog')"><i class="lnr lnr-alarm"></i> <span>工作日志</span></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -166,6 +116,10 @@
 	</div>
 </footer>
 
-
+<script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/vendor/jquery-slimscroll/jquery.slimscroll.min.js}"></script>
+<script th:src="@{/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js}"></script>
+<script th:src="@{/vendor/chartist/js/chartist.min.js}"></script>
+<script th:src="@{/scripts/klorofil-common.js}"></script>
 </body>
 </html>
